# sphinx-revealjs_20IW

./: pyproject.toml
.github/workflows/: main.yml
doc/: conf.py
doc/_locales/ja/LC_MESSAGES/: changes.po  configurations.po  directives.po  examples.po  index.po  setup.po  upgrade.po
doc/_locales/ja/LC_MESSAGES/examples/: customizing-design-simply.po
doc/_locales/ja/LC_MESSAGES/upgrade/: 1.x.po  2.x.po
sphinx_revealjs/: __init__.py
