[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "sphinx-revealjs"
authors = [{name = "Kazuya Takei", email = "myself@attakei.net"}]
readme = "README.rst"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Framework :: Sphinx",
    "Framework :: Sphinx :: Extension",
    "Framework :: Sphinx :: Theme",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
    "Topic :: Multimedia :: Graphics :: Presentation",
    "Topic :: Software Development",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing :: Markup :: HTML",
]
dependencies = [
    "Sphinx",
    "docutils",
]
dynamic = ["version", "description"]

[project.optional-dependencies]
lint = [
    "flake8 >=3.8.4,<4",
    "flake8-docstrings >=1.5.0,<2",
    "flake8-isort >=4.0.0,<5",
    "pydocstyle >=5.1.1,<6",
    "doc8 >=0.11.2,<1",
    "black >=20.8b1,<21",
]
test = [
    "pytest >=6.2.5,<7",
    "BeautifulSoup4 >=4.9.3,<5",
]
doc = [
    "sphinx-rtd-theme >=0.5.1,<1",
    "sphinxcontrib-gtagjs >=0.2.0,<1",
]
demo = [
    "sphinx-intl >=2.0.1,<3",
    "sphinxcontrib-gtagjs >=0.2.0,<1",
]

[project.urls]
Home = "https://attakei.github.io/sphinx-revealjs"
Repository = "https://github.com/attakei/sphinx-revealjs"
Documentation = "https://sphinx-revealjs.readthedocs.io/"

[tool.flit.sdist]
include = [
    "sphinx_revealjs/themes/sphinx_revealjs/static/revealjs4/",
]

[tool.flit.module]
name = "sphinx_revealjs"

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = [
    "tests",
]
